error
src/verify_map.c: In function ‘get_map_dimensions’:
src/verify_map.c:27:31: error: division ‘sizeof (char **) / sizeof (char *)’ does not compute the number of array elements [-Werror=sizeof-pointer-div]
   27 |  map->rows = sizeof(map->map) / sizeof(char *);
      |                               ^
src/verify_map.c:27:12: error: assignment to ‘int *’ from ‘long unsigned int’ makes pointer from integer without a cast [-Werror=int-conversion]
   27 |  map->rows = sizeof(map->map) / sizeof(char *);
      |            ^
src/verify_map.c:28:12: error: assignment to ‘int *’ from ‘size_t’ {aka ‘long unsigned int’} makes pointer from integer without a cast [-Werror=int-conversion]
   28 |  map->cols = ft_strlen(map->map[0]);
      |            ^
cc1: all warnings being treated as errors
make: *** [Makefile:50: obj/verify_map.o] Error 1
